# cmake-proj-standard-template

./: BatchPush.bat  BatchPush.ps1  BatchPush.sh  CMakeLists.txt  CMakePresets.json  README.md  build_all.bat  build_all.ps1  build_all.sh
assets/cmake-assets/: CMakePresets.template.json
cmake/: x64-windows-mingw.cmake
docs/batch-push/: BatchPush.md
docs/cmak-docs/cmake-project-structure/: Cmake构建项目之标准项目组织结构.md
docs/cmak-docs/cmake支持语言文档/: cmake支持语言介绍.md
docs/cmake-docs/: cmake项目构建全部预设（CMakePresets.json）配置脚本.md  cmake项目构建脚本样例.md
docs/github/: CONTRIBUTING.md
scripts/BachPush/: BatchPush.ps1
scripts/add-remote-repos/ConfigFile/: add_remotes.bat  add_remotes.ps1
scripts/add-remote-repos/ConfigFile-Editing/: add_remotes.sh  remotes.json
scripts/add-remote-repos/No-ConfigFile/: add_remotes.bat  add_remotes.ps1  add_remotes.sh
src/: main.cpp
